--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="jogo">
-          <img src="imgs/kirby.jpg" alt="Kirby">
+          <img src="imgs/kirby.jpg">
 
           <h3>Kirby and the Forgotten Land</h3>
           <p>Kirby está de volta em uma aventura 3D cheia de ação e fofura.</p>
